--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Carcassonne rip-off",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "jquery": "^3.3.1",
+    "socket.io": "^2.0.4"
   },
   "devDependencies": {},
   "scripts": {
